gtk_file_chooser_set_filter() doesn't work for GtkFileChooserNative
gtk_file_chooser_set_filter()
doesn't work for GtkFileChooserNative
Reproducer: try to upload an image to this GitLab. Epiphany's file chooser defaults to "All supported types" which filters out anything other than HTML and images. That's annoying. It should show all files. The code forwards added and removed filters to the delegate dialog, but doesn't do anything to set the selected one, so the wrong one gets chosen.