web-view: Show all files when running the file chooser for uploads

When uploading files, it's annoying to filter the files down to files
supported by Epiphany. The user is not selecting a file to be opened in
Epiphany. He is just selecting any arbitrary file to be uploaded to the
website. We shouldn't be filtering anything here at all.

This doesn't work yet due to https://gitlab.gnome.org/GNOME/gtk/issues/1492
but no reason to stall on that.